// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages productDateInformation it should render errors correctly when radio errors are passed to the page 1`] = `
<Component
  description="Product Date Information page of the Create Fares Data Service"
  title="Product Date Information - Create Fares Data Service"
>
  <CsrfForm
    action="/api/productDateInformation"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Choose one of the options below",
            "id": "start-date",
          },
        ]
      }
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="product-date-information-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-heading-l"
          id="product-date-information-heading"
        >
          Is there a start or end date for your product(s)?
        </legend>
        <span
          className="govuk-hint"
          id="product-dating-hint"
        >
          If not supplied, your start date will default to today and your end date will default to 100 years from today
        </span>
        <RadioConditionalInput
          fieldset={
            Object {
              "heading": Object {
                "content": "Is there a start or end date for your product(s)?",
                "hidden": true,
                "id": "product-dates-information",
              },
              "radioError": Array [],
              "radios": Array [
                Object {
                  "dataAriaControls": "product-dates-required-conditional",
                  "id": "product-dates-required",
                  "inputErrors": Array [],
                  "inputHint": Object {
                    "content": "",
                    "id": "",
                  },
                  "inputType": "date",
                  "inputs": Array [
                    Object {
                      "defaultValue": "##",
                      "id": "start-date",
                      "label": "Start Date",
                      "name": "startDate",
                    },
                    Object {
                      "defaultValue": "##",
                      "id": "end-date",
                      "label": "End Date",
                      "name": "endDate",
                    },
                  ],
                  "label": "Yes",
                  "name": "productDates",
                  "value": "Yes",
                },
                Object {
                  "id": "product-dates-information-not-required",
                  "label": "No",
                  "name": "productDates",
                  "value": "No",
                },
              ],
            }
          }
          key="product-dates-information"
        />
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages productDateInformation it should render the product date information page 1`] = `
<Component
  description="Product Date Information page of the Create Fares Data Service"
  title="Product Date Information - Create Fares Data Service"
>
  <CsrfForm
    action="/api/productDateInformation"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="product-date-information-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-heading-l"
          id="product-date-information-heading"
        >
          Is there a start or end date for your product(s)?
        </legend>
        <span
          className="govuk-hint"
          id="product-dating-hint"
        >
          If not supplied, your start date will default to today and your end date will default to 100 years from today
        </span>
        <RadioConditionalInput
          fieldset={
            Object {
              "heading": Object {
                "content": "Is there a start or end date for your product(s)?",
                "hidden": true,
                "id": "product-dates-information",
              },
              "radioError": Array [],
              "radios": Array [
                Object {
                  "dataAriaControls": "product-dates-required-conditional",
                  "id": "product-dates-required",
                  "inputErrors": Array [],
                  "inputHint": Object {
                    "content": "",
                    "id": "",
                  },
                  "inputType": "date",
                  "inputs": Array [
                    Object {
                      "defaultValue": "##",
                      "id": "start-date",
                      "label": "Start Date",
                      "name": "startDate",
                    },
                    Object {
                      "defaultValue": "##",
                      "id": "end-date",
                      "label": "End Date",
                      "name": "endDate",
                    },
                  ],
                  "label": "Yes",
                  "name": "productDates",
                  "value": "Yes",
                },
                Object {
                  "id": "product-dates-information-not-required",
                  "label": "No",
                  "name": "productDates",
                  "value": "No",
                },
              ],
            }
          }
          key="product-dates-information"
        />
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;
